<resources>
    <string name="app_name">Dhcs_application</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="todo">TODO</string>
    <string name="first_name">First name*</string>
    <string name="or">OR</string>
    <string name="last_name">Last name*</string>
    <string name="confirm_password">confirm password*</string>
    <string name="email">Email*</string>
    <string name="enter_password">Enter Password*</string>
    <string name="you_re_just_one_spet_away_from_signing_up">You\'re just one step away from signing up</string>
    <string name="mobile">Mobile*</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="please_enter_your_details">Please enter your details</string>
    <string name="already_registered">Already Registered?</string>
    <string name="tab_text_1">Instructors</string>
    <string name="tab_text_2">Student</string>
    <string name="instructor_tab1">Lessons</string>
    <string name="instructor_tab2">Announcements</string>
    <string name="instructor_tab3">Progress</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_location">Map</string>
</resources>
