<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#FFFFFF"
        android:scrollIndicators="right"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="120dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_redirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="111dp"
            android:layout_marginRight="111dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/log_in"
            android:textColor="#395E81"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.707"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password2"
            app:layout_constraintVertical_bias="0.939" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="78dp"
            android:layout_marginBottom="629dp"
            android:text="@string/you_re_just_one_spet_away_from_signing_up"
            android:textAlignment="center"
            android:textColor="#5A5C5C"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_id"
            android:layout_width="307dp"
            android:layout_height="49dp"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginBottom="562dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress|textPersonName|textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="307dp"
            android:layout_height="49dp"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginBottom="498dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mobile"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="307dp"
            android:layout_height="49dp"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginBottom="432dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="307dp"
            android:layout_height="49dp"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="393dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginBottom="289dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPersonName|textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="307dp"
            android:layout_height="49dp"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="465dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginBottom="217dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPersonName|textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="307dp"
            android:layout_height="49dp"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="321dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginBottom="361dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/signup"
            android:layout_width="303dp"
            android:layout_height="51dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="62dp"
            android:background="#B2B6B6"
            android:shadowColor="#009B3B3B"
            android:text="Sign Up"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password2"
            app:layout_constraintVertical_bias="0.011" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="33dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/already_registered"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password2"
            app:layout_constraintVertical_bias="0.946" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>>
</androidx.constraintlayout.widget.ConstraintLayout>